[package]
name = "fwdlist"
version = "0.1.0"
authors = ["François-Xavier Bourlet <bombela@gmail.com>"]
license = "MIT"
repository = "https://github.com/bombela/fwdlist"
description = "A simply linked (forward) list"
keywords = ["list", "forward", "collection", "simply", "linked"]

[features]
some_unsafe = []
