[package]
name = "fwdlist"
version = "0.2.0"
authors = ["François-Xavier Bourlet <bombela@gmail.com>"]
license = "MIT"
repository = "https://github.com/bombela/fwdlist"
documentation = "http://bombela.github.io/fwdlist"
description = "A simply linked (forward) list"
keywords = ["list", "forward", "collection", "simply", "linked"]
edition = "2018"

[features]
bench = []
